# nxv

./: .gitignore  .readthedocs.yml  README.md  logo.py  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  release.yml  tests.yml
docs/: conf.py  index.rst  installation.rst  quickstart.rst  reference.rst  requirements.txt
nxv/: __init__.py  _functional.py  _graphviz.py  _ipython.py  _rendering.py  _style.py  _util.py
nxv/html_like/: __init__.py  _html_like.py
nxv/styles/: __init__.py  _font.py  _verbose.py
src/: docs.py  examples.py  logo.py
src/nxv/: __init__.py  _functional.py  _graphviz.py  _ipython.py  _rendering.py  _style.py  _util.py
src/nxv/html_like/: __init__.py  _html_like.py
src/nxv/styles/: _verbose.py
tests/: test_functional.py  test_html_like.py  test_nxv.py  test_rendering.py  test_styles.py  test_util.py  test_version.py
