[tool.poetry]
name = "nxv"
version = "0.1.0"
description = "Render NetworkX graphs using GraphViz"
authors = ["Timothy Shields <Timothy.Shields@twosigma.com>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/twosigma/nxv"
repository = "https://github.com/twosigma/nxvz"
keywords = [
    "networkx", "graphviz", "graph", "tree", "network",
    "draw", "render", "visualize", "visualization",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
networkx = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pytest-cov = "^2.10.1"
isort = "^5.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
