[tool.poetry]
authors = ["Timothy Shields <Timothy.Shields@twosigma.com>"]
description = "Render NetworkX graphs using GraphViz"
homepage = "https://github.com/twosigma/nxv"
include = [
  "LICENSE",
]
keywords = [
  "networkx",
  "graphviz",
  "graph",
  "tree",
  "network",
  "draw",
  "render",
  "visualize",
  "visualization",
]
license = "Apache-2.0"
name = "nxv"
packages = [
  {include = "nxv", from = "src"},
]
readme = "README.md"
repository = "https://github.com/twosigma/nxvz"
version = "0.1.0"

[tool.poetry.dependencies]
networkx = "^2.5"
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = {extras = ["toml"], version = "^5.3"}
isort = "^5.5.2"
pytest = "^5.2"
pytest-cov = "^2.10.1"
sphinx = "^3.2.1"
sphinx-autodoc-typehints = "^1.11.0"
releases = "^1.6.3"
sphinx_rtd_theme = "^0.5.0"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["nxv"]

[tool.coverage.report]
show_missing = true
[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
